--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.12.2",
     "firebase": "^11.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
